...
                                                        </constraints>
                                                        <fontDescription key="fontDescription" name="TrebuchetMS-Bold" family="Trebuchet MS" pointSize="15"/>
                                                        <state key="normal" title="OPRET BRUGER MED EMAIL">
                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        </state>
...
                                                        </constraints>
                                                        <fontDescription key="fontDescription" name="TrebuchetMS-Bold" family="Trebuchet MS" pointSize="15"/>
                                                        <state key="normal" title="JEG HAR ALLEREDE EN BRUGER">
                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        </state>
...
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Indtast din email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RL6-a9-gcI">
                                                        <rect key="frame" x="0.0" y="25.333333333333371" width="354" height="50"/>
                                                        <color key="backgroundColor" white="1" alpha="0.35057255990000002" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Indtast dit password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="y3A-r1-7JO">
                                                        <rect key="frame" x="0.0" y="109.66666666666669" width="354" height="50"/>
                                                        <color key="backgroundColor" white="1" alpha="0.35057255993150682" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                </constraints>
                                            </stackView>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MEm-Yd-Xc9">
                                                <rect key="frame" x="175.66666666666666" y="30" width="63" height="29.333333333333329"/>
                                                <fontDescription key="fontDescription" name="TrebuchetMS-Bold" family="Trebuchet MS" pointSize="25"/>
...
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Indtast dit navn" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wrM-DX-u7e">
                                                        <rect key="frame" x="0.0" y="25.333333333333343" width="354" height="50"/>
                                                        <color key="backgroundColor" white="1" alpha="0.35057255990000002" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
